--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,9 @@
-SECRET_KEY=""
-DEBUG=0
+SECRET_KEY="mysecretkey"
+DEBUG=1
 DB_NAME="bookstore_service"
-DB_USER="user"
-DB_PASSWORD="password"
-DB_HOST="localhost"
-DB_PORT="5432"
-REDIS_URI="redis://127.0.0.1:6379",
+DB_USER="postgres"
+DB_PASSWORD="postgres"
+DB_HOST="virtual_bookstore_1.5"
+DB_PORT=5432
+REDIS_URI="redis://127.0.0.1:6379"
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
