--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,11 @@ django==5.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.3.1
 django-environ==0.11.2
-psycopg2==2.9.10
-psycopg-pool==3.2.3
+psycopg2-binary==2.9.10 # connect to our db
+psycopg[pool]==3.2.3 # create pool connection
 redis==5.2.0
 pytest==8.3.3
 pytest-django==4.9.0
 faker==33.0.0
 django-import-export==4.2.1
-# work on reviews tests
 bleach==6.2.0
