Added docker compose yml file & health check - Added docker-compose.yml file with the project services such as DB, Cache DB, Migrations & backend - Added health_checks app which check for Postgres, Redis, Devices' RAM & DISK health, also used in compose healthcheck - Updated the readme file with docker-compose & future enhancements

--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ DEBUG=1
 DB_NAME="bookstore_service"
 DB_USER="postgres"
 DB_PASSWORD="postgres"
-DB_HOST="virtual_bookstore_1.5"
+DB_HOST="db"
 DB_PORT=5432
-REDIS_URI="redis://127.0.0.1:6379"
+REDIS_URI="redis://redis_db:6379"
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
