updated authentication cycle to be complete except for email verification where: - applied login and refresh throttling for authenticated & anonymous users - added permission classses for verified & blocked users - updated user & review models for extra validations - update env file - updated db_migrations and backend services's healthcheck and depends_on  in the compose file - removed redundant authentication_classes field from views

--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,12 @@
 SECRET_KEY="mysecretkey"
-DEBUG=1
+DEBUG=0
 DB_NAME="bookstore_service"
 DB_USER="postgres"
 DB_PASSWORD="postgres"
 DB_HOST="db"
 DB_PORT=5432
 REDIS_URI="redis://redis_db:6379"
-ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+ALLOWED_HOSTS="localhost,127.0.0.1,0.0.0.0"
+ANON_RATE="10/day"
+AUTH_TOKEN_REFRESH_RATE="3/day"
+AUTH_LOGIN_RATE="3/hour"
